# intensity_duration_frequency_analysis

./: .buildinfo  .directory  .gitattributes  .gitignore  .readthedocs.yml  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.html  CONTRIBUTING.md  MANIFEST.in  README.html  README.md  api.html  base_functions.html  example.html  example.ipynb  example.py  example_hourly.py  examples.html  genindex.html  index.html  make_html.sh  make_pypi.sh  objects.inv  py-modindex.html  pyproject.toml  requirements.txt  run_tests+coverage.sh  run_tests.sh  search.html  searchindex.js  setup.cfg  setup.py
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: package_release.yaml  sphinx_docs_to_gh_pages.yaml  tests.yaml
_make_docs/: README.md  base_functions.rst  conf.py  example.ipynb  index.rst  make_html.sh
_make_docs/example/: example_commandline.ipynb  example_python_api.ipynb
_make_docs/source/: conf.py  index.rst
_modules/: index.html
_modules/idf_analysis/: in_out.html  (+7 more)
_sources/: README.md.txt  base_functions.rst.txt  examples.rst.txt  index.rst.txt
_static/: basic.css  documentation_options.js  nature.css
additional_files/: schmitt_ortsunabhaengig_2015.ods
docs/: .buildinfo  README.html  api.html  base_functions.html  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
documentation/: api.rst  conf.py  examples.rst  index.rst  make_html.sh  requirements.txt
example/: EXAMPLE_results_h_N.csv  design_rain_ehyd_5214.csv  example_commandline.ipynb  example_heavy_rainfall_index.ipynb  example_python_api.ipynb  example_python_api.py  example_python_api_extended.ipynb  example_python_api_extended.py  example_reverse_engeneering.py
examples/: convert_old_to_new_parameters.py  example_60m.py  example_commandline.html  example_commandline.ipynb  example_heavy_rainfall_index.html  example_heavy_rainfall_index.ipynb  example_python_api.html  example_python_api.ipynb  example_python_api.py  example_python_api_2025.html  example_python_api_2025.ipynb  example_python_api_2025.py  example_python_api_extended.html  example_python_api_extended.ipynb  example_python_api_extended.py  example_reverse_engeneering.html  example_reverse_engeneering.ipynb  example_reverse_engeneering.py  generic_example.py  reverse_engineering.py
heavy_rain_analysis/: __init__.py  __main__.py  arg_parser.py  definitions.py  helpers.py  main_class.py  plotly_class.py  plots.py  sww_utils.py
idf_analysis/: __init__.py  __main__.py  _cl_script.py  _console_script.py  additional_scripts.py  arg_parser.py  calculation_methods.py  definitions.py  event_series_analysis.py  extrem_value_series.py  extreme_value_analysis_2025.py  heavy_rainfall_index.py  idf_backend.py  idf_backend_2012.py  idf_backend_2025.py  idf_backend_abstract.py  idf_class.py  idf_parameters.py  in_out.py  intensity_evaluation.py  interim_result_plots.py  little_helpers.py  parameter_formulas.py  parameter_formulation_class.py  parameter_formulations.py  plot_helpers.py  sww_utils.py  synthetic_rainseries.py
joss-paper/: paper.bib  paper.md
kostra/: __init__.py  arg_parser.py  definitions.py  helpers.py  kostra.py  kostra_io.py  kostra_plotly.py  main_class.py  plotly_interface.py  sww_helpers.py
lib/: __init__.py  arg_parser.py
tests/: test_arg_parser.py  test_idf_backend.py  test_idf_class.py  test_little_helpers.py  test_plot_helpers.py  test_sri_class.py  test_sww_utils.py
(+81 files in other folders)
